# mcp_query_table

./: README.md  pyproject.toml
examples/: main.py  main_chat.py  main_sync.py  mcp.txt
mcp_query_table/: __init__.py  __main__.py  enums.py  playwright_helper.py  server.py  tool.py  utils.py
mcp_query_table/providers/: baidu.py  n.py  yuanbao.py
mcp_query_table/sites/: eastmoney.py  iwencai.py  tdx.py
query_table/: __init__.py  __main__.py  enums.py  main.py  server.py  tool.py
query_table/sites/: eastmoney.py  iwencai.py  tdx.py
streamlit/: README.md  app.py  auth.yaml  client.py  config.yaml  requirements.txt  run.bat
streamlit/.streamlit/: config.toml
tests/: DNmjgBLm.js  headless.py  hook.py  hook2.py  hook3.py  rY-FUFEX.js
